// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications search POST /applications-service/search-results should render a message if no results are found 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\">Search results</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
            role=\\"search\\" aria-label=\\"Applications\\">
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Search cases</label>
                    <input class=\\"govuk-input pins-dashboard-form--input\\"
                    id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" value=\\"query\\" inputmode=\\"search\\">
                </div>
                <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
            </form>
        </div>
    </div>
    <div>
        <p class=\\"govuk-heading-s\\">0 results</p>
        <hr class=\\"govuk-section-break govuk-section-break--l govuk-section-break--visible\\">
        <p class=\\"govuk-heading-s\\">There are no matching results</p>
        <p class=\\"govuk-body\\">Improve your search by:</p>
        <ul class=\\"govuk-list govuk-list--bullet\\">
            <li>double-checking your spelling</li>
            <li>make sure you have the case reference number right</li>
        </ul>
    </div>
</main>"
`;

exports[`applications search POST /applications-service/search-results should render a message if the query is empty 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\">Search results</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
            role=\\"search\\" aria-label=\\"Applications\\">
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Search cases</label>
                    <p id=\\"searchApplications-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a search term</p>
                    <input                     class=\\"govuk-input pins-dashboard-form--input govuk-input--error\\" id=\\"searchApplications\\"
                    name=\\"query\\" type=\\"text\\" aria-describedby=\\"searchApplications-error\\" inputmode=\\"search\\">
                </div>
                <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
            </form>
        </div>
    </div>
    <div>
        <p class=\\"govuk-heading-s\\">0 results</p>
    </div>
</main>"
`;

exports[`applications search POST /applications-service/search-results should render the page with the results if params are correct 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-full\\">
            <h1 class=\\"govuk-heading-xl\\">Search results</h1>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" action=\\"search-results\\" novalidate class=\\"pins-dashboard-box--form pins-dashboard-form\\"
            role=\\"search\\" aria-label=\\"Applications\\">
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label pins-dashboard-form--label\\" for=\\"searchApplications\\">Search cases</label>
                    <input class=\\"govuk-input pins-dashboard-form--input\\"
                    id=\\"searchApplications\\" name=\\"query\\" type=\\"text\\" value=\\"query\\" inputmode=\\"search\\">
                </div>
                <button class=\\"govuk-button pins-dashboard-form--btn\\" data-module=\\"govuk-button\\">Search</button>
            </form>
        </div>
    </div>
    <div>
        <p class=\\"govuk-heading-s\\">1 results</p>
        <table class=\\"govuk-table pins-table--fixed pins-table--bordered\\">
            <thead class=\\"govuk-table__head\\">
                <tr class=\\"govuk-table__row\\">
                    <th scope=\\"col\\" class=\\"govuk-table__header govuk-!-width-one-half\\">Name</th>
                    <th scope=\\"col\\" class=\\"govuk-table__header text-align--right\\">Stage</th>
                </tr>
            </thead>
            <tbody class=\\"govuk-table__body\\">
                <tr class=\\"govuk-table__row\\">
                    <td class=\\"govuk-table__cell\\"><a class=\\"govuk-body\\" href=\\"/applications-service/create-new-case/76/check-your-answers\\"> Title</a>
                    </td>
                    <td class=\\"govuk-table__cell govuk-!-width-one-quarter text-align--right\\"><strong class=\\"govuk-tag govuk-tag--\\">Draft</strong>
                    </td>
                </tr>
            </tbody>
        </table>
    </div>
</main>"
`;
